# python-either

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  tag.sh
python_either/: either.py  either_ext.py  infix.py
tests/: either_test.py
