[tool.poetry]
name = "python-either"
version = "0.0.1"
description = "Python either monad"
authors = ["Kirmanie L Ravariere <enamrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
